# opwk

./: Cargo.toml  Readme.md  sonar-project.properties
.github/workflows/: rust.yml
benches/: opwk_benchmarks.rs
src/: forward.rs  inverse.rs  lib.rs  types.rs
tests/: tests.rs
