[package]
name = "opwk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "opwk_benchmarks"
harness = false